Fix #10: Upgrade JRE from 17 to 21